Serialization performance improvements